--- a/assets/css/globals.scss
+++ b/assets/css/globals.scss
@@ -136,7 +136,7 @@ body {
     font-family: 'inter';
     font-weight: 400;
     font-size: 1.8rem;
-    color: theme('colors.black.DEFAULT');
+    color: #25284A;
     background-color: theme('colors.white.DEFAULT');
 
     &.is-loading {
